[workspace]
members = [
    "contracts/proxy",
    "contracts/flash_loan",
    "contracts/mock_arb",
    "packages/common",
]

[workspace.dependencies]
cw-multi-test = { git = "https://github.com/oak-security/cw-multi-test.git", branch = "main" }
cosmwasm-schema = { version = "=1.1.9" }
cosmwasm-std = { version = "1.1.9" }
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
schemars = "0.8.10"
serde = { version = "1.0" }
cw-utils = "1.0.1"
thiserror = { version = "1.0.31" }